2004-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),
	(generate_mouse_event), (bacon_video_widget_realize),
	(bacon_video_widget_tick_send), (bacon_video_widget_open),
	(bacon_video_widget_is_seekable):
	* src/bacon-video-widget.h:
	* src/baconvideowidget-marshal.list:
	* src/bvw-test.c: (main):
	* src/cd-drive.c: (get_cd_scsi_id), (get_scsi_cd_name),
	(linux_scan):
	* src/dvd_plus_rw_utils.cpp:
	* src/totem.c: (totem_action_set_mrl), (on_got_metadata_event),
	(update_seekable), (update_current_time), (gui_update_cb),
	(video_widget_create): go to towards valgrind clean, fixed up a
	deadlock when opening remote files that require authentication,
	add a "seekable" member to the tick signal

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_files),
	(totem_playlist_save_files):
	* src/totem-screenshot.c: (totem_screenshot_new):
	* src/totem.c: (on_open1_activate): use the new file chooser in the
	screenshot dialog, and allow non-local files while opening and saving
	files

2004-03-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (parse_asx_entry), (parse_asx_entries):
	Fix parsing for http://switch.streamgate.nl/cgi-bin/streamswitch?streamid=58&a=.asx
	following the docs at http://msdn.microsoft.com/library/default.asp?url=/library/en-us/wmplay/mmp_sdk/entryrefelement.asp

2004-03-26  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" (Lithuanian) to ALL_LINGUAS.

2004-03-25  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_get_mrls):
	End the array with a NULL. DVD and CD playback now work with
	the GStreamer backend.

2004-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),