@@ -1,3 +1,9 @@
+2004-04-01  Johan Dahlin  <johan@gnome.org>
+
+	* src/bacon-video-widget-gst.c (bacon_video_widget_class_init):
+	Tick, add BOOLEAN to end of argument list
+	(got_time_tick): Send seekable argument.
+
 2004-03-31  Bastien Nocera  <hadess@hadess.net>
 
 	* src/Makefile.am:
